--- a/app/views/precipitations/images.html.erb
+++ b/app/views/precipitations/images.html.erb
@@ -72,7 +72,7 @@
     <tr>
       <th>Zeitpunkt</th>
       <th>Niederschlagsmenge</th>
-      <th>Temperatur min/max</th>
+      <th>Temperatur</th>
 
       <% @selected_species.each do |species| %>
         <th class="species use-in-graph" data-diagram-colour="<%= species.diagram_colour %>" style="color: rgb(<%= species.diagram_colour %>);">
@@ -101,8 +101,7 @@
         </td>
 
         <td>
-          <span class="minimal-temperature"><%= precipitation.temperature.try(:min) || 0 %></span>°C/
-          <span class="maximal-temperature"><%= precipitation.temperature.try(:max) || 0 %></span>°C
+          <span class="minimal-temperature"><%= precipitation.temperature.try(:value) || 0 %></span>°C
         </td>
 
         <% @selected_species.each do |species| %>
