--- a/app/views/temperatures/_form.html.erb
+++ b/app/views/temperatures/_form.html.erb
@@ -12,20 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :date %><br>
-    <%= f.date_select :date %>
+    <%= f.label :timestamp %><br>
+    <%= f.date_select :timestamp %>
   </div>
   <div class="field">
-    <%= f.label :min %><br>
-    <%= f.text_field :min %>
-  </div>
-  <div class="field">
-    <%= f.label :max %><br>
-    <%= f.text_field :max %>
-  </div>
-  <div class="field">
-    <%= f.label :ground %><br>
-    <%= f.text_field :ground %>
+    <%= f.label :value %><br>
+    <%= f.text_field :value %>
   </div>
   <div class="actions">
     <%= f.submit %>
