--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :date, :class => 'control-label' %>
+    <%= f.label :timestamp, :class => 'control-label' %>
     <%= f.datetime_select :timestamp, :class => 'form-control' %>
   </div>
 
