Rename 'Niederschlag' in UI

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
           <ul class="nav navbar-nav">
             <li><%= link_to 'Lichtschrankenereignisse', events_path %></li>
             <li><%= link_to 'Fotos', images_path %></li>
-            <li><%= link_to 'Niederschläge/Aktivität', precipitations_path %></li>
+            <li><%= link_to 'Witterung', precipitations_path %></li>
             <li><%= link_to 'Temperaturen', temperatures_path %></li>
             <li><%= link_to 'Spezies', species_index_path %></li>
             <li><%= link_to 'Ereignistypen', event_types_path %></li>
