--- a/app/views/precipitations/images.html.erb
+++ b/app/views/precipitations/images.html.erb
@@ -7,7 +7,7 @@
     <%= image_tag 'rain.png' %> Niederschlag
   </div>
 
-  <h1>Niederschläge vs. Fotodaten</h1>
+  <h1>Witterung vs. Fotodaten</h1>
 </header>
 
 <div class="pull-right">
