--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,19 +9,35 @@
     <header class="navbar navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">flausis</a>
+          <a class="navbar-brand" href="/">
+            <%= image_tag 'brand.png' %>
+            Flausis
+          </a>
         </div>
+
+        <p>
+          <a href="http://github.com/wvk/flausis">
+            <%= image_tag 'ribbon.png', :style => 'position: absolute; top: 0; right: 0; border: 0;', :alt => 'Fork me on GitHub' %>
+          </a>
+        </p>
 
         <nav class="navbar" role="navigation">
           <ul class="nav navbar-nav">
             <li><%= link_to 'Lichtschrankenereignisse', events_path %></li>
             <li><%= link_to 'Fotos', images_path %></li>
             <li><%= link_to 'Witterung', precipitations_path %></li>
-            <li><%= link_to 'Temperaturen', temperatures_path %></li>
-            <li><%= link_to 'Spezies', species_index_path %></li>
-            <li><%= link_to 'Ereignistypen', event_types_path %></li>
-            <li><%= link_to 'Geschlechter', sexes_path %></li>
-            <li><%= link_to 'Sensoren', sensors_path %></li>
+            <li><%= link_to 'Beobachtungsnächte', nightly_observation_sessions_path %></li>
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Verwaltungskram <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><%= link_to 'Temperaturen', temperatures_path %></li>
+                <li><%= link_to 'Spezies', species_index_path %></li>
+                <li><%= link_to 'Ereignistypen', event_types_path %></li>
+                <li><%= link_to 'Geschlechter', sexes_path %></li>
+                <li><%= link_to 'Sensoren', sensors_path %></li>
+              </ul>
+            </li>
           </ul>
         </nav>
       </div>
